# lmforge

./: BUILD_STATUS.md  Cargo.toml  README.md  README_zh.md
.VSCodeCounter/2026-05-31_01-54-42/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.trae/rules/: git-commit-message.md
assets/repositories/: lingmoos-obs.gpg
docs/: DEBIAN_TESTING_GUIDE.md  LOGGING_EXAMPLES.md  LOGGING_SYSTEM.md
presets/: README.md  desktop.toml  minimal.toml  nightly.toml  official.toml
src/: main.rs
src/command/: build.rs  cli.rs  mod.rs  package.rs
src/domain/: artifact.rs  config.rs  context.rs  mod.rs
src/engine/: engine_trait.rs  livebuild.rs  mod.rs  orchestrator.rs
src/features/: desktop.rs  feature_trait.rs  installer.rs  live.rs  mod.rs
src/infra/: artifact_manager.rs  checksum.rs  cleanup.rs  mod.rs  overlay.rs  workspace.rs
src/platform/: debian.rs  mod.rs  platform_trait.rs
src/runtime/: log_stream.rs  mod.rs  mount.rs  mount_manager.rs  process.rs  sandbox.rs  signal_handler.rs
src/stages/: mod.rs  pipeline.rs  stage.rs
src/telemetry/: build_id.rs  console.rs  context.rs  file_logger.rs  layer.rs  mod.rs  runtime.rs
