[package]
name = "lmforge"
version = "0.1.0"
edition = "2021"
description = "Industrial-grade Linux distribution build platform"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem
walkdir = "2"
glob = "0.3"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Async filesystem
tokio-stream = "0.1"
futures = "0.3"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Command which
which = "6"

# Console terminal
console = "0.15"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "lmforge"
path = "src/main.rs"
